# rusty-soc

./: .gitignore  Cargo.toml  LICENSE  README.md  config_c.ld
.cargo/: config.toml
hardware/: Makefile  svd.xml
hardware/lib/fusetim/boards/: ulx3s.lpf
hardware/lib/fusetim/spi/: Makefile  SpiMaster.v  SpiMasterPeripheral.v  SpiMasterPeripheral_flash_tb.v  SpiMasterPeripheral_synth_tb.v  SpiMasterPeripheral_tb.v  SpiMaster_synth_tb.v  SpiMaster_tb.v  ulx3s_tb.v
hardware/lib/silice/projects/ice-v/CPUs/: ice-v.si
hardware/src/: audio.si  audio_viz.v  dac.si  display.si  dmem.v  gpio.si  pre_include_compiled.lua  soc.si  spi.si  spi_pll.v
scripts/: post_build.sh
silicon/: Cargo.toml  README.md  SUBMISSION.md  build.rs  entry.s  memory.x
silicon-fat/: Cargo.toml
silicon-fat/src/: lib.rs  mbr.rs
silicon-hal/: Cargo.toml
silicon-hal/src/: audio.rs  config.rs  dac.rs  delay.rs  display.rs  fb.rs  gpio.rs  led.rs  lib.rs  peripherals.rs  spi.rs  timer.rs  typesafe.rs
silicon-hal/src/display/: spidisplay.rs
silicon-pac/: Cargo.toml
silicon-pac/src/: audio_streamer.rs  dac.rs  display.rs  gpio.rs  lib.rs  spi0.rs  timer0.rs
silicon-pac/src/audio_streamer/: control.rs  data_mono_double.rs  data_mono_quad.rs  data_mono_single.rs  data_stereo_double.rs  data_stereo_single.rs
silicon-pac/src/dac/: left_output.rs  output.rs
silicon-pac/src/display/: control.rs  ctrl.rs  transfer.rs
silicon-pac/src/gpio/: audio_viz.rs  btn.rs  led.rs  spi_cs.rs  spi_oled.rs  spi_sdcard.rs
silicon-pac/src/spi0/: ctrl.rs  read_and_status.rs  read_data.rs  status.rs  write_data.rs
silicon-pac/src/timer0/: ctrl.rs  hi_value.rs  lo_value.rs  timer_ctrl.rs  timer_hi_value.rs  timer_lo_value.rs
silicon-std/: Cargo.toml
silicon/src/: app.rs  display.rs  fs.rs  lib.rs  main.rs  peripheral.rs  utils.rs
silicon/src/app/: boot.rs  load.rs  menu.rs  play.rs
silicon/tools/: img2rgb565.py  prepare_music.py
