[package]
name = "silicon-hal"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-hal = "1"
fugit = "0.3.9"
paste = "1.0"
silicon-pac = { path = "../silicon-pac" }
riscv-rt = { version = "0.17", optional = true }
bitfield = "0.19.4"
embedded-graphics-core = { version = "0.4", optional =  true }

[features]
default = ["graphics"]
rt = ["silicon-pac/rt", "riscv-rt"]
graphics = ["dep:embedded-graphics-core"]