[package]
name = "silicon-pac"
version = "0.1.0"
edition = "2024"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[dependencies]
critical-section = { version = "1.2", optional = true }
riscv = "0.16.0"
riscv-rt = { version = "0.17.0", optional = true }
vcell = "0.1.3"

[features]
rt = ["riscv-rt"]