cargo-features = ["panic-immediate-abort"]

[package]
name = "silicon"
version = "0.1.0"
edition = "2024"

[dependencies]
silicon-hal = { path = "../silicon-hal", features= ["rt", "graphics"] }
embedded-hal = "1"
embedded-hal-bus = { version = "0.3.0", default-features =  false, features = [] }
#embedded-sdmmc = { path = "../embedded-sdmmc-rs", default-features = false, features = [] }
embedded-sdmmc = { version = "0.9.0", default-features = false, features = [] }
riscv-rt = { version = "0.17.0", features = ["single-hart"] }
embedded-graphics = { version = "0.8.1" }
simple-fatfs = { version = "0.1.0-alpha.2", default-features = false, features = [] }

[profile.dev]
panic = "immediate-abort"
strip = true
opt-level = "s"

[profile.release]
panic = "immediate-abort"
strip = true
lto = "fat"
codegen-units = 1
incremental = false
opt-level = "z"
