cargo-features = ["panic-immediate-abort"]

[package]
name = "silicon"
version = "0.1.0"
edition = "2024"

[dependencies]
silicon-hal = { path = "../silicon-hal", features= ["rt", "graphics"] }
embedded-hal = "1"
embedded-hal-bus = { version = "0.3.0", default-features =  false, features = [] }
embedded-sdmmc = { git = "https://github.com/rust-embedded-community/embedded-sdmmc-rs.git", branch = "develop", default-features = false, features = [] }
riscv-rt = { version = "0.17.0", features = ["single-hart"] }
embedded-graphics = { version = "0.8.1" }
heapless = { version = "0.9.2", features = [], default-features = false}

[profile.dev]
panic = "abort"
strip = true
opt-level = "s"

[profile.release]
panic = "abort"
strip = true
lto = "fat"
codegen-units = 1
incremental = false
opt-level = "z"
